--- a/apps/users/templates/users/login.html
+++ b/apps/users/templates/users/login.html
@@ -11,6 +11,13 @@
                     Submit
                 </button>
             </div>
+            {% if messages %}
+            {% for message in messages %}
+            <div class="p-1 mb-1 text-red-500 rounded-lg">
+                {{ message }}
+            </div>
+            {% endfor %}
+            {% endif %}
             <div class="mt-2 text-center">
                 <small>
                     {% comment %} <a class="text-red-600 hover:underline" href="{% url 'users:password_reset' %}">Forgot Password?</a> {% endcomment %}
