--- a/apps/products/templates/products/index.html
+++ b/apps/products/templates/products/index.html
@@ -5,37 +5,60 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <title>Vivid</title>
         <link rel="stylesheet" href="{% static "output.css" %}" />
+        <script src="https://kit.fontawesome.com/1dceec0453.js" crossorigin="anonymous"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+    <link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'>
+    
 </head>
-<body class="bg-white text-gray-800">
-    <header class="flex justify-between items-center p-4 border-b border-gray-200">
-        <div class="text-2xl font-bold">Vivid</div>
-        <div class="flex space-x-4">
-            <a class="text-gray-600" href="#">Man</a>
-            <a class="text-gray-600" href="#">Woman</a>
-        </div>
-        <div class="flex items-center space-x-4">
-            <input class="border border-gray-300 rounded-full px-4 py-1" placeholder="Search....." type="text"/>
-            <i class="fas fa-user text-gray-600 cursor-pointer" id="user-icon"></i>
-            <i class="fas fa-heart text-gray-600"></i>
-            <i class="fas fa-shopping-cart text-gray-600"></i>
-        </div>
-    </header>
+<body class="flex flex-col ">
+  <header class="w-full h-[105px]"> 
+    <div class="flex justify-between items-center h-full pl-[104px] pr-[104px]"> 
+      <div class="text-[32px] font-{Arial}" style="font-family: Alata;">Vivid</div>
+      <div class="flex flex-row items-center">
+        <div class="mr-10"><input type="search" placeholder="Search..." class="border-[0.8px] border-gray-300 text-[18px]  pl-[5%] rounded-[10px] w-[380px] h-[40px]" ></div>
 
-    <div id="user-info" class="hidden absolute top-16 right-4 bg-white border border-gray-200 shadow-lg rounded-lg p-4 w-64">
-        <h3 class="text-lg font-bold mb-2">Almas Zhakanov</h3>
-        <p>almas.zh22@gmail.com</p>
+        <div class="flex items-center space-x-12 ">
+          <a href=""><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[28px] h-[28px] text-[#666666] hover:text-black">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
+          </svg>
+        </a>
+        <a href=""><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[28px] h-[28px] text-[#666666] hover:text-black">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
+          </svg>
+        </a>
+          <a href=""> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[28px] h-[28px] text-[#666666] hover:text-black"> 
+          <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+        </svg>
+      </a>
+      </div>
+      </div>
     </div>
+  <div class="w-[90%] h-[1px] bg-gradient-to-r from-[#FFFF] via-[#E2E2E2] to-[#ffff] m-auto" ></div>
+  </header> 
+  <footer class="flex flex-row items-center w-full h-[74px] gap-10 text-[24px] pl-[104px] " style="font-family: Microsoft Sans Serif;">
+    <button class="text-[#717171] hover:text-black font">Man</button>
+      <button class="text-[#717171] hover:text-black">Woman</button>
+  </footer>
+  <div class="w-[100%] h-[1px] bg-[#E2E2E2] m-auto" ></div>
+  
+  <section class="relative w-full h-[500px] overflow-hidden flex justify-center items-center mt-20">
+    <div class="absolute flex gap-4">
+      <div class="relative w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center overflow-hidden">
+        <!--<img src="https://vk.com/1lovean1mer?z=photo618110528_457240231%2Fphoto_feed618110528" 
+             alt="photo" 
+             class="absolute inset-0 w-full h-full object-cover">-->
+             <span class="absolute inset-0 w-full h-full object-cover">Gabimaru</span>
+      </div>
+      <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7]"></div>
+      <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7]"></div>
+    </div>
+    <div class="absolute flex flex-row justify-between items-center w-full " style="padding: 1% 1%;">
+      <button class="w-[70px] h-[70px] bg-white rounded-[50px]"></button>
+      <button class="w-[70px] h-[70px] bg-white rounded-[50px]"></button>
+    </div>
+  </section>
+ 
 
-    <script>
-        document.getElementById('user-icon').addEventListener('click', function() {
-            var userInfo = document.getElementById('user-info');
-            if (userInfo.classList.contains('hidden')) {
-                userInfo.classList.remove('hidden');
-            } else {
-                userInfo.classList.add('hidden');
-            }
-        });
-    </script>
+</body>
 </body>
 </html>
