--- a/apps/products/templates/products/index.html
+++ b/apps/products/templates/products/index.html
@@ -11,52 +11,49 @@
     
 </head>
 <body class="flex flex-col ">
-  <header class="w-full h-[105px]"> 
-    <div class="flex justify-between items-center h-full pl-[104px] pr-[104px]"> 
-      <div class="text-[32px] font-{Arial}" style="font-family: Alata;">Vivid</div>
-      <div class="flex flex-row items-center">
-        <div class="mr-10"><input type="search" placeholder="Search..." class="border-[0.8px] border-gray-300 text-[18px]  pl-[5%] rounded-[10px] w-[380px] h-[40px]" ></div>
+  {% include "products/header.html" %}
 
-        <div class="flex items-center space-x-12 ">
-          <a href=""><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[28px] h-[28px] text-[#666666] hover:text-black">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
-          </svg>
-        </a>
-        <a href=""><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[28px] h-[28px] text-[#666666] hover:text-black">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
-          </svg>
-        </a>
-          <a href=""> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[28px] h-[28px] text-[#666666] hover:text-black"> 
-          <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-        </svg>
-      </a>
-      </div>
-      </div>
-    </div>
-  <div class="w-[90%] h-[1px] bg-gradient-to-r from-[#FFFF] via-[#E2E2E2] to-[#ffff] m-auto" ></div>
-  </header> 
-  <footer class="flex flex-row items-center w-full h-[74px] gap-10 text-[24px] pl-[104px] " style="font-family: Microsoft Sans Serif;">
-    <button class="text-[#717171] hover:text-black font">Man</button>
-      <button class="text-[#717171] hover:text-black">Woman</button>
-  </footer>
-  <div class="w-[100%] h-[1px] bg-[#E2E2E2] m-auto" ></div>
-  
   <section class="relative w-full h-[500px] overflow-hidden flex justify-center items-center mt-20">
     <div class="absolute flex gap-4">
-      <div class="relative w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center overflow-hidden">
-        <!--<img src="https://vk.com/1lovean1mer?z=photo618110528_457240231%2Fphoto_feed618110528" 
-             alt="photo" 
-             class="absolute inset-0 w-full h-full object-cover">-->
-             <span class="absolute inset-0 w-full h-full object-cover">Gabimaru</span>
-      </div>
-      <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7]"></div>
-      <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7]"></div>
+      <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center"><a href="Manclothes.html"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo"></a></div>
+      <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo"></div>
+      <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo"></div>
     </div>
     <div class="absolute flex flex-row justify-between items-center w-full " style="padding: 1% 1%;">
-      <button class="w-[70px] h-[70px] bg-white rounded-[50px]"></button>
-      <button class="w-[70px] h-[70px] bg-white rounded-[50px]"></button>
+      <button class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center"><svg class="w-[25px] h-[25px]"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"/></svg></button>
+
+      <button class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center"><svg xmlns="http://www.w3.org/2000/svg" class="w-[25px] h-[25px]" viewBox="0 0 320 512"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg></button>
     </div>
   </section>
+  <section class="flex flex-col mt-5 gap-2 w-full pl-[104px] pr-[104px] mb-20">
+    <span class="text-[20px]" style="font-family: Microsoft Sans Serif;">For Woman</span>
+    <div class="flex flex-col gap-2 ">
+      <div class="flex flex-row w-full justify-between gap-2.5" >
+        <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden"> <img src="static/Photo/Screenshot_85.png" alt="T-shirt" class="w-full h-full"></div>
+          <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden " ><img src="static/Photo/Screenshot_84.png" class="w-full h-full" alt="accessories">
+          </div>
+          <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden"><img src="static/Photo/Screenshot_86.png" class="w-full h-full" alt="Shose"></div>
+          <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden"><img src="static/Photo/Screenshot_87.png" class="w-full h-full alt="Parfume" ></div>
+      </div>
+      <span class="text-[20px] mt-3" style="font-family: Microsoft Sans Serif;">For Man</span>
+      <div class="flex flex-row w-full justify-between gap-2.5 " >
+        <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
+          <a href="{% url 'products:manclothes' %}">
+            <img src="static/Photo/Screenshot_91.png" class="w-full h-full alt="T-shirt">
+          </a></div>
+          <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden " >
+            <img src="static/Photo/Screenshot_90.png" class="w-full h-full alt="accessories">
+          </div>
+          <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
+            <img src="static/Photo/Screenshot_89.png" class="w-full h-full alt="Shose">
+          </div>
+          <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
+            <img src="static/Photo/Screenshot_88.png" class="w-full h-full alt="Parfume">
+          </div>
+      </div>
+    </div>
+  </section>
+
  
 
 </body>
