add admin and seller page2

--- a/apps/products/templates/products/Girlclothes.html
+++ b/apps/products/templates/products/Girlclothes.html
@@ -15,9 +15,9 @@
       
       <section class="relative w-full h-[500px] overflow-hidden flex justify-center items-center mt-20">
         <div class="absolute flex gap-4">
-          <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#000000] to-[#141414] flex justify-center items-center"><img src="{%static 'Photo/box.png'%}" alt="Photo"></div>
-          <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#000000] to-[#141414] flex justify-center items-center"><img src="{%static 'Photo/box.png'%}" alt="Photo"></div>
-          <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#000000] to-[#141414] flex justify-center items-center"><img src="{%static 'Photo/box.png'%}" alt="Photo"></div>
+          <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#000000] to-[#141414] flex justify-center items-center"><img src="{%static 'Photo/Без имени-3.png'%}" alt="Photo"></div>
+          <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#000000] to-[#141414] flex justify-center items-center"><img src="{%static 'Photo/Без имени-3.png'%}" alt="Photo"></div>
+          <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#000000] to-[#141414] flex justify-center items-center"><img src="{%static 'Photo/Без имени-3.png'%}" alt="Photo"></div>
         </div>
         <div class="absolute flex flex-row justify-between items-center w-full " style="padding: 1% 1%;">
           <button class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center"><svg class="w-[25px] h-[25px]"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"/></svg></button>
