Обновлен header и index страницы

--- a/apps/products/templates/products/header.html
+++ b/apps/products/templates/products/header.html
@@ -40,7 +40,7 @@
         <button id="openModalButtonMan" class="text-[#717171] hover:text-black font">Man</button>
         <button id="openModalButtonWoman" class="text-[#717171] hover:text-black">Woman</button>
       </footer>
-      <section id="modal" class="absolute w-full h-[500px] flex-row mt-5 gap-10 bg-white flex z-999 hidden">
+      <section id="modal" class="absolute w-full h-[500px] flex-row mt-5 gap-10 bg-white flex z-[20] hidden">
         <div class="flex flex-col gap-5 text-[20px] pl-[104px] ">
           <p>Clothes</p><p>Accessories</p><p>Shoes</p><p>Parfums</p>
         </div>
