--- a/apps/products/templates/products/header.html
+++ b/apps/products/templates/products/header.html
@@ -12,17 +12,17 @@
 </head>
 <body>
     <header class="w-full h-[105px] relative"> 
-        <div class="flex justify-between items-center h-full pl-[104px] pr-[104px]"> 
+        <div class="flex justify-between items-center h-full pl-[5%] pr-[5%]"> 
           <div class="text-[32px] font-{Arial}" style="font-family: Alata;"><a href="{% url 'products:home' %}">Vivid</a></div>
           <div class="flex flex-row items-center">
             <div class="mr-10"><input type="search" placeholder="Search..." class="border-[0.8px] border-gray-300 text-[18px]  pl-[5%] rounded-[10px] w-[380px] h-[40px]" ></div>
-    
-            <div class="flex items-center space-x-12 ">
-              <a href="{% url 'products:register' %}"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[28px] h-[28px] text-[#666666] hover:text-black">
+
+            <div class="flex flex-row items-center gap-[50px] ml-10 ">
+              <a href="{% url 'products:register' %}" ><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[28px] h-[28px] text-[#666666] hover:text-black items-center">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
               </svg>
             </a>
-            <a href=""><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[28px] h-[28px] text-[#666666] hover:text-black">
+            <a onclick="openFavoritesTab()" href="{% url 'products:personal' %}"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-[28px] h-[28px] text-[#666666] hover:text-black">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
               </svg>
             </a>
@@ -36,10 +36,11 @@
       <div class="w-[90%] h-[1px] bg-gradient-to-r from-[#FFFF] via-[#E2E2E2] to-[#ffff] m-auto" ></div>
       </header>
 
-      <footer class="flex flex-row items-center w-full h-[74px] gap-10 text-[24px] pl-[104px]  " style="font-family: Microsoft Sans Serif;">
-        <button id="openModalButtonMan" class="text-[#717171] hover:text-black font">Man</button>
+      <footer class="flex flex-row items-center w-full h-[74px] gap-10 text-[24px] pl-[5%] pr-[5%]  " style="font-family: Microsoft Sans Serif;">
+        <button class="text-[#717171] hover:text-black font modal-page">Man</button>
         <button id="openModalButtonWoman" class="text-[#717171] hover:text-black">Woman</button>
       </footer>
+      <div class="w-full h-[1px] bg-[#f3f2f2] m-auto" ></div>
       <section id="modal" class="absolute w-full h-[500px] flex-row mt-5 gap-10 bg-white flex z-[20] hidden">
         <div class="flex flex-col gap-5 text-[20px] pl-[104px] ">
           <p>Clothes</p><p>Accessories</p><p>Shoes</p><p>Parfums</p>
@@ -86,30 +87,8 @@
         </div>
        </div>
       </section>
-      <script>
-        const slider = document.getElementById('button');
-        const modal = document.getElementById('modal');
-        const openModalButtonMan = document.getElementById('openModalButtonMan');
-        const openModalButtonWoman = document.getElementById('openModalButtonWoman');
-       
-        function openModal(){
-         modal.style.display='flex';
-         slider.classList.add('hidden');
-        }
-        function closeModal(){
-         modal.style.display='none';
-         slider.classList.remove('hidden');
-        }
-        openModalButtonMan.addEventListener('mouseover',openModal);
-        openModalButtonWoman.addEventListener('mouseover',openModal);
-       
-        document.addEventListener('mouseout', (event) => {
-           if (event.target === modal) {
-               closeModal();
-           }
-       });
-       
-        </script>
-
+      <script src="{%static 'js/header.js'%}"></script>
+      
+   
 </body>
 </html>
