--- a/apps/products/templates/products/index.html
+++ b/apps/products/templates/products/index.html
@@ -34,7 +34,7 @@
           <a href="{% url 'products:categories' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden " ><img src="static/Photo/Screenshot_84.png" class="w-full h-full" alt="accessories">
           </div></a>
           <a href="{% url 'products:categories' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden"><img src="static/Photo/Screenshot_86.png" class="w-full h-full" alt="Shose"></div></a>
-          <a href="{% url 'products:categories' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden"><img src="static/Photo/Screenshot_87.png" class="w-full h-full alt="Parfume" ></div></a>
+          <a href="{% url 'products:categories' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden"><img src="static/Photo/Screenshot_87.png" class="w-full h-full" alt="Parfume"></div></a>
       </div>
       <span class="text-[20px] mt-3" style="font-family: Microsoft Sans Serif;">For Man</span>
       <div class="flex flex-row w-full justify-between gap-2.5 " >
