--- a/apps/products/templates/products/index.html
+++ b/apps/products/templates/products/index.html
@@ -40,16 +40,16 @@
       <div class="flex flex-row w-full justify-between gap-2.5 " >
         <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
           <a href="{% url 'products:manclothes' %}">
-            <img src="static/Photo/Screenshot_91.png" class="w-full h-full alt="T-shirt">
+            <img src="static/Photo/Screenshot_91.png" class="w-full h-full" alt="T-shirt">
           </a></div>
-          <a href="{% url 'products:categories' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden " >
-            <img src="static/Photo/Screenshot_90.png" class="w-full h-full alt="accessories">
+          <a href="{% url 'products:categories' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
+            <img src="static/Photo/Screenshot_90.png" class="w-full h-full" alt="accessories">
           </div></a>
           <a href="{% url 'products:categories' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-            <img src="static/Photo/Screenshot_89.png" class="w-full h-full alt="Shose">
+            <img src="static/Photo/Screenshot_89.png" class="w-full h-full" alt="Shose">
           </div></a>
           <a href="{% url 'products:categories' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-            <img src="static/Photo/Screenshot_88.png" class="w-full h-full alt="Parfume">
+            <img src="static/Photo/Screenshot_88.png" class="w-full h-full" alt="Parfume">
           </div></a>
       </div>
     </div>
