--- a/apps/products/templates/products/Manclothes.html
+++ b/apps/products/templates/products/Manclothes.html
@@ -31,27 +31,27 @@
             <span class="text-[20px]" style="font-family: Microsoft Sans Serif;">Categories</span>
           <div class="flex flex-row w-full justify-between gap-2.5" >
             <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-                  <a href="{% url 'products:categories' %}"><img src="{%static 'Photo/Screenshot_7.png'%}" class="w-full h-full alt="T-shirt"></a>
+                  <a href="{% url 'products:categories' %}"><img src="{%static 'Photo/Screenshot_7.png'%}" class="w-full h-full" alt="T-shirt"></a>
                </div>
                 <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden " >
-                  <a href="{% url 'products:categories' %}"><img src="{%static 'Photo/Screenshot_1 copy.png'%}" class="w-full h-full alt="accessories"></a>
+                  <a href="{% url 'products:categories' %}"><img src="{%static 'Photo/Screenshot_1 copy.png'%}" class="w-full h-full" alt="accessories"></a>
                 </div>
                 <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-                  <a href="{% url 'products:categories' %}"><img src="{%static 'Photo/Screenshot_2.png'%}" class="w-full h-full alt="Shose"></a>
+                  <a href="{% url 'products:categories' %}"><img src="{%static 'Photo/Screenshot_2.png'%}" class="w-full h-full" alt="Shose"></a>
                 </div>
                 <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-                  <a href=""><img src="{%static 'Photo/Screenshot_3.png'%}" class="w-full h-full alt="Parfume"></a>
+                  <a href=""><img src="{%static 'Photo/Screenshot_3.png'%}" class="w-full h-full" alt="Parfume"></a>
                 </div>
             </div>
           <div class="flex flex-row w-full justify-between gap-2.5 " >
             <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-                <a href="{% url 'products:categories' %}"><img src="{%static 'Photo/Screenshot_4.png'%}" class="w-full h-full alt="T-shirt"></a>
+                <a href="{% url 'products:categories' %}"><img src="{%static 'Photo/Screenshot_4.png'%}" class="w-full h-full" alt="T-shirt"></a>
               </div>
               <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden " >
-                <a href="{% url 'products:categories' %}"><img src="{%static 'Photo/Screenshot_5.png'%}" class="w-full h-full alt="accessories"></a>
+                <a href="{% url 'products:categories' %}"><img src="{%static 'Photo/Screenshot_5.png'%}" class="w-full h-full" alt="accessories"></a>
               </div>
               <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-                <a href="{% url 'products:categories' %}"><img src="{%static 'Photo/Screenshot_6.png'%}" class="w-full h-full alt="Shose"></a>
+                <a href="{% url 'products:categories' %}"><img src="{%static 'Photo/Screenshot_6.png'%}" class="w-full h-full" alt="Shose"></a>
               </div>
               <a href="{% url 'products:categories' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-[#D9D9D9] text-[35px] overflow-hidden">
                 <span>See</span><span>More</span>
@@ -66,7 +66,7 @@
       <span class="pl-[120px] text-[18px]" style="font-family: Microsoft Sans Serif;">Popular</span>
       <section class="flex flex-col justify-center items-center mb-100 pl-[120px] pr-[104px] ">
         <div class="flex flex-row gap-5 w-full justify-start">
-            <a href="{% url 'products:itempage' %}"><div class="flex flex-col justify-self-center items-start overflow-hidden ">
+            <a href="{% url 'products:products_detail' 'slug' %}"><div class="flex flex-col justify-self-center items-start overflow-hidden ">
             <img class="w-[240px] h-[350px]" src="{%static 'Photo/Screenshot_9.png'%}" alt="item">
                 <div class="text-[18px]" style="font-family: Microsoft Sans Serif;" >
                     <p>7 310 ₸</p><p class="text-[15px]">T-Shirt</p>
