--- a/apps/products/templates/products/questionnaire.html
+++ b/apps/products/templates/products/questionnaire.html
@@ -152,7 +152,7 @@
           <p class="text-gray-500">
             Thank you for your application. We will review it and contact you soon.
           </p>
-          <a href="{% url 'products:personal' %}"><button 
+          <a href="{% url 'products:personal_my_products' %}"><button 
             id="newFormButton"
             class="mt-4 bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded-md transition duration-200"
           >
