--- a/apps/products/templates/products/personal_moderation.html
+++ b/apps/products/templates/products/personal_moderation.html
@@ -1,5 +1,5 @@
 {% extends "products/personal.html" %}
-{% block content %}
+{% block personal %}
 <!-- Вкладка "Модерация" для админов -->
 <div>
     <div class="bg-white border rounded-lg shadow-sm">
