--- a/apps/products/templates/products/personal_my_products.html
+++ b/apps/products/templates/products/personal_my_products.html
@@ -1,5 +1,5 @@
 {% extends "products/personal.html" %}
-{% block content %}
+{% block personal %}
 <!-- Вкладка "Моя одежда" для продавцов -->
 <div>
     <h3 class="text-xl font-semibold mb-4">Моя одежда</h3>
