--- a/apps/products/templates/products/personal_orders.html
+++ b/apps/products/templates/products/personal_orders.html
@@ -1,5 +1,5 @@
 {% extends "products/personal.html" %}
-{% block content %}
+{% block personal %}
 <div class="p-8">
     <div class="tab-content active" id="orders">
         <h3 class="text-xl font-semibold mb-4">История заказов</h3>
