--- a/apps/products/templates/products/personal_update.html
+++ b/apps/products/templates/products/personal_update.html
@@ -1,5 +1,5 @@
 {% extends "products/personal.html" %}
-{% block content %}
+{% block personal %}
 
 <div class="z-50 items-center justify-center flex">
     <div class="bg-white rounded-lg w-full  mx-4">
