--- a/apps/products/templates/base.html
+++ b/apps/products/templates/base.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>{% block title %}{% endblock  %}</title>
 		<script>
 			tailwind.config = {
 				theme: {
@@ -31,7 +32,13 @@
 			}
 		</style>
 		<script src="https://cdn.tailwindcss.com"></script>
+		<script src="https://kit.fontawesome.com/1dceec0453.js" crossorigin="anonymous"></script>
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+		<link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'>
+		<script src="https://kit.fontawesome.com/1dceec0453.js" crossorigin="anonymous"></script>
+    
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+		<link rel="stylesheet" href="{% static "output.css" %}" />
 	</head>
 	<body>
 		{% block content %}{% endblock %}
