--- a/apps/products/templates/products/Register.html
+++ b/apps/products/templates/products/Register.html
@@ -1,4 +1,4 @@
-{% extends 'products/base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 {% load static %}
 <div class="min-h-screen flex flex-col md:flex-row">
