--- a/apps/products/templates/products/personal_cart.html
+++ b/apps/products/templates/products/personal_cart.html
@@ -1,5 +1,5 @@
 {% extends "products/personal.html" %}
-{% block content %}
+{% block personal %}
 <div class="container mx-auto px-4 py-8">
     <div class="flex flex-col lg:flex-row gap-6">
         <!-- Left side - Cart items -->
