--- a/apps/products/templates/products/personal_cart2.html
+++ b/apps/products/templates/products/personal_cart2.html
@@ -1,5 +1,5 @@
 {% extends "products/personal.html" %}
-{% block content %}
+{% block personal %}
 <div class="tab-content" id="cart">
     <div class="flex flex-col lg:flex-row gap-6">
         <!-- Left side - Cart items -->
