--- a/apps/products/templates/products/personal_likes.html
+++ b/apps/products/templates/products/personal_likes.html
@@ -1,5 +1,5 @@
 {% extends "products/personal.html" %}
-{% block content %}
+{% block personal %}
 <div class="container mx-auto px-4">
     <h3 class="text-xl font-semibold mb-4">Избранные товары</h3>
     
