add gender to products and main categories

--- a/apps/products/templates/products/personal.html
+++ b/apps/products/templates/products/personal.html
@@ -21,6 +21,13 @@
                         Update profile
                     </button>
                 </a>
+                <!-- Кнопка выхода -->
+                <a href="{% url "users:logout" %}"
+                class="px-6 py-3 border border-gray-300 rounded-md hover:bg-gray-50 transition-colors text-lg">
+                    <button >
+                        Logout
+                    </button>
+                </a>
             </div>
             
             <!-- Содержимое профиля -->
