--- a/apps/products/templates/products/index.html
+++ b/apps/products/templates/products/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block topbar %}
   <div class="Man-categories">
-  <section class="w-full h-[500px] flex justify-center items-center mt-20 z-[10]">
+  <section class="w-full max-w-full overflow-hidden h-[500px] flex justify-center items-center mt-20 z-[10]">
     <div class="flex gap-4">
       <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center"><a href="Manclothes.html"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo"></a></div>
       <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo"></div>
