--- a/apps/products/templates/products/product_list.html
+++ b/apps/products/templates/products/product_list.html
@@ -1,22 +1,9 @@
+{% extends "top_bar.html" %}
 {% load static %}
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Man Clothes</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/1dceec0453.js" crossorigin="anonymous"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-    <link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'>
-</head>
-<body class="bg-gray-50">
-    {% include "products/header.html" %}
+{% block topbar %}
+<div class="bg-gray-50">
     
     <div class="container mx-auto px-4 py-8">
-        <h1 class="text-3xl font-bold mb-6 text-gray-800">Man's T-Shirt</h1>
-        
         <div class="flex flex-col md:flex-row gap-8">
             <!-- Sidebar Categories -->
             <div class="w-full md:w-1/5">
@@ -98,5 +85,5 @@
             </div>
         </div>
     </div>
-</body>
-</html>
+</div>
+{% endblock %}
