add workable categories filter

--- a/apps/products/templates/products/Girlclothes.html
+++ b/apps/products/templates/products/Girlclothes.html
@@ -34,17 +34,17 @@
 		<span class="text-[20px]" style="font-family: Microsoft Sans Serif">Categories</span>
 		<div class="flex flex-row w-full justify-between gap-2.5">
 			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-				<a href="{% url 'products:categories' %}">
+				<a href="{% url 'products:shop' %}">
 					<img src="{%static 'Photo/Screenshot_7.png'%}" class="w-full h-full" alt="T-shirt" />
 				</a>
 			</div>
 			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-				<a href="{% url 'products:categories' %}">
+				<a href="{% url 'products:shop' %}">
 					<img src="{%static 'Photo/Screenshot_1 copy.png'%}" class="w-full h-full" alt="accessories" />
 				</a>
 			</div>
 			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-				<a href="{% url 'products:categories' %}">
+				<a href="{% url 'products:shop' %}">
 					<img src="{%static 'Photo/Screenshot_2.png'%}" class="w-full h-full" alt="Shose" />
 				</a>
 			</div>
@@ -54,21 +54,21 @@
 		</div>
 		<div class="flex flex-row w-full justify-between gap-2.5">
 			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-				<a href="{% url 'products:categories' %}">
+				<a href="{% url 'products:shop' %}">
 					<img src="{%static 'Photo/Screenshot_4.png'%}" class="w-full h-full" alt="T-shirt" />
 				</a>
 			</div>
 			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-				<a href="{% url 'products:categories' %}">
+				<a href="{% url 'products:shop' %}">
 					<img src="{%static 'Photo/Screenshot_5.png'%}" class="w-full h-full" alt="accessories" />
 				</a>
 			</div>
 			<div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-				<a href="{% url 'products:categories' %}">
+				<a href="{% url 'products:shop' %}">
 					<img src="{%static 'Photo/Screenshot_6.png'%}" class="w-full h-full" alt="Shose" />
 				</a>
 			</div>
-			<a href="{% url 'products:categories' %}">
+			<a href="{% url 'products:shop' %}">
 				<div
 					class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-[#D9D9D9] text-[35px] overflow-hidden"
 				>
@@ -80,7 +80,7 @@
 	</div>
 </section>
 <section class="w-[84%] h-[180px] bg-black m-auto flex items-center overflow-hidden mb-10">
-	<a href="{% url 'products:categories' %}">
+	<a href="{% url 'products:shop' %}">
 		<div class="relative">
 			<img
 				class="relative top-20 w-full scale-110 blur-[1px]"
