--- a/apps/products/templates/products/product_list.html
+++ b/apps/products/templates/products/product_list.html
@@ -26,6 +26,9 @@
                     <div class="flex-grow">
                         {{ filter_form.price_order }}
                     </div>
+                    <div class="flex-grow">
+                        {{ filter_form.size }}
+                    </div>
                     <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700 transition duration-300">
                         Apply Filters
                     </button>
