--- a/apps/products/templates/products/Manclothes.html
+++ b/apps/products/templates/products/Manclothes.html
@@ -20,13 +20,13 @@
       <span class="text-[20px]" style="font-family: Microsoft Sans Serif;">Categories</span>
     <div class="flex flex-row w-full justify-between gap-2.5" >
       <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-            <a href="{% url 'products:categories' %}"><img src="{%static 'Photo/Screenshot_7.png'%}" class="w-full h-full" alt="T-shirt"></a>
+            <a href="{% url 'products:shop' %}?category"><img src="{%static 'Photo/Screenshot_7.png'%}" class="w-full h-full" alt="T-shirt"></a>
           </div>
           <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden " >
-            <a href="{% url 'products:categories' %}"><img src="{%static 'Photo/Screenshot_1 copy.png'%}" class="w-full h-full" alt="accessories"></a>
+            <a href="{% url 'products:shop' %}"><img src="{%static 'Photo/Screenshot_1 copy.png'%}" class="w-full h-full" alt="accessories"></a>
           </div>
           <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-            <a href="{% url 'products:categories' %}"><img src="{%static 'Photo/Screenshot_2.png'%}" class="w-full h-full" alt="Shose"></a>
+            <a href="{% url 'products:shop' %}"><img src="{%static 'Photo/Screenshot_2.png'%}" class="w-full h-full" alt="Shose"></a>
           </div>
           <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
             <a href=""><img src="{%static 'Photo/Screenshot_3.png'%}" class="w-full h-full" alt="Parfume"></a>
@@ -34,22 +34,22 @@
       </div>
     <div class="flex flex-row w-full justify-between gap-2.5 " >
       <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-          <a href="{% url 'products:categories' %}"><img src="{%static 'Photo/Screenshot_4.png'%}" class="w-full h-full" alt="T-shirt"></a>
+          <a href="{% url 'products:shop' %}"><img src="{%static 'Photo/Screenshot_4.png'%}" class="w-full h-full" alt="T-shirt"></a>
         </div>
         <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden " >
-          <a href="{% url 'products:categories' %}"><img src="{%static 'Photo/Screenshot_5.png'%}" class="w-full h-full" alt="accessories"></a>
+          <a href="{% url 'products:shop' %}"><img src="{%static 'Photo/Screenshot_5.png'%}" class="w-full h-full" alt="accessories"></a>
         </div>
         <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-          <a href="{% url 'products:categories' %}"><img src="{%static 'Photo/Screenshot_6.png'%}" class="w-full h-full" alt="Shose"></a>
+          <a href="{% url 'products:shop' %}"><img src="{%static 'Photo/Screenshot_6.png'%}" class="w-full h-full" alt="Shose"></a>
         </div>
-        <a href="{% url 'products:categories' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-[#D9D9D9] text-[35px] overflow-hidden">
+        <a href="{% url 'products:shop' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-[#D9D9D9] text-[35px] overflow-hidden">
           <span>See</span><span>More</span>
         </div></a>
     </div>
   </div>
 </section>
 <section class="w-[84%] h-[180px] bg-black m-auto flex items-center overflow-hidden mb-10">
-  <a href="{% url 'products:categories' %}"><div class="relative"> <img class="relative top-20 w-full scale-110 blur-[1px]" src="{%static 'Photo\jaanus-jagomagi-FFUPFHcp2YU-unsplash.jpg'%}" alt=""></div></a>
+  <a href="{% url 'products:shop' %}"><div class="relative"> <img class="relative top-20 w-full scale-110 blur-[1px]" src="{%static 'Photo\jaanus-jagomagi-FFUPFHcp2YU-unsplash.jpg'%}" alt=""></div></a>
   <div class="absolute flex flex-col pl-[3%] text-[25px] text-white font-bold"><span>Sale of collections</span><span>From previous seasons</span></div>
 </section>
 <span class="pl-[120px] text-[18px]" style="font-family: Microsoft Sans Serif;">Popular</span>
