--- a/apps/products/templates/products/index.html
+++ b/apps/products/templates/products/index.html
@@ -20,10 +20,10 @@
       <div class="flex flex-row w-full justify-between gap-2.5" >
         <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
           <a href="{% url 'products:girlclothes' %}"><img src="static/Photo/Screenshot_85.png" alt="T-shirt" class="w-full h-full"></a></div>
-          <a href="{% url 'products:categories' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden " ><img src="static/Photo/Screenshot_84.png" class="w-full h-full" alt="accessories">
+          <a href="{% url 'products:shop' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden " ><img src="static/Photo/Screenshot_84.png" class="w-full h-full" alt="accessories">
           </div></a>
-          <a href="{% url 'products:categories' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden"><img src="static/Photo/Screenshot_86.png" class="w-full h-full" alt="Shose"></div></a>
-          <a href="{% url 'products:categories' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden"><img src="static/Photo/Screenshot_87.png" class="w-full h-full" alt="Parfume"></div></a>
+          <a href="{% url 'products:shop' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden"><img src="static/Photo/Screenshot_86.png" class="w-full h-full" alt="Shose"></div></a>
+          <a href="{% url 'products:shop' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden"><img src="static/Photo/Screenshot_87.png" class="w-full h-full" alt="Parfume"></div></a>
       </div>
       <span class="text-[20px] mt-3" style="font-family: Microsoft Sans Serif;">For Man</span>
       <div class="flex flex-row w-full justify-between gap-2.5 " >
@@ -31,13 +31,13 @@
           <a href="{% url 'products:manclothes' %}">
             <img src="static/Photo/Screenshot_91.png" class="w-full h-full" alt="T-shirt">
           </a></div>
-          <a href="{% url 'products:categories' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
+          <a href="{% url 'products:shop' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
             <img src="static/Photo/Screenshot_90.png" class="w-full h-full" alt="accessories">
           </div></a>
-          <a href="{% url 'products:categories' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
+          <a href="{% url 'products:shop' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
             <img src="static/Photo/Screenshot_89.png" class="w-full h-full" alt="Shose">
           </div></a>
-          <a href="{% url 'products:categories' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
+          <a href="{% url 'products:shop' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
             <img src="static/Photo/Screenshot_88.png" class="w-full h-full" alt="Parfume">
           </div></a>
       </div>
